--- a/ansible/inventory/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:04Ne608z,iv:xYVYYxmszoTGwKmfDjfypPpq8asf+ngzwosBWojj5zQ=,tag:N1hmfqx+Al9XIMAK9o2vhg==,type:str]
-ansible_user: ENC[AES256_GCM,data:P6dlf56o,iv:Aa+6EnlFSu8at2v1pmQ3JKB8404KAVgxLlhNolZZjOk=,tag:Yaz7yKyDfoy0DLNkl/DgXQ==,type:str]
+kind: ENC[AES256_GCM,data:clwoUqdw,iv:rLR6i33oP8QTt7KtS2T/2NKaArpcFrJTGGLx06bvrIA=,tag:+ZfU1l2vlRaLzF8oj2KUyQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:jtg5ltRQ,iv:PsuRiSEYpwfVbRuB48dJCK4qdujZW229T5r2vSV0tGY=,tag:Ud2/EaqglMkWPAoYPrYMsA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUMlhYTGFqMHRzWTRQTHRX
-            RzJLM2RMSnNQcnhtU0lnQU1vV0JwSXo4MjJFClQ4bzZPNko1dUxKb2lBdVIzYWhz
-            a0VVWVp6clN0aUF6eEVuMWErTWExNjgKLS0tIFk0RkNNNzRPeHlJbTNQK3JjNE1E
-            ZUlGdTFlRTZCN3MzdHFPd3lYeHE3NVEKhIQkKH93U0wnS0+z9c/IoppU6cueOx6D
-            5M5lclooIZUfO6a12Njhg4ekBSco7frGy49vWF7IJ7nBlAsY+xMKrA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjOUFQcFc1cy9yVUx4cnk3
+            UlBldjFuWHQ0RnAvUGxuZWx4NTQxOXc4aERBCkNKRGhWVlNnQjFZS050ZEZtZ2tF
+            RXE4ZE5uRm43UVNuZS96QmdDaDEzZzAKLS0tIHA1eU54UTM3aVI1cVRaWERGTnJE
+            cDN5aGFiQ1pBMjE0UytSYWpFL2plVWsKC+DWXgB8Zoaz5O4fVjCGhCYsCXRa6PGy
+            w8AxftLRvloyuXBgvqVTk+KPjAT8G+jTWJLU+qQWOyAcF1ZZ4lgyBA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T19:30:11Z"
-    mac: ENC[AES256_GCM,data:d63Tk66jBfQeQ3d9FDZ3LuraYdwyFM/H9qyK76+DvwjIjUmRLVSX9UVtUUnhtzbPxd+dh3dshJXX+PbP5UC4k3xK2LqiHig8QPpixYNKTk5h57t1B2NP6f1J/x3RaflJm7A2hWzb19Utl2DkqzevJGIqO3dvYKls6VwrjjfWcHs=,iv:z5wpdkYKPOxWaLqJQTau6UnEc9uynYCAIbm7sdSk2GQ=,tag:SXD0BcYT1V/8ZB72tu50Bg==,type:str]
+    lastmodified: "2022-12-25T22:25:14Z"
+    mac: ENC[AES256_GCM,data:7RkvpLutDd246zZYdoavYO5jewrbhhHNlF18MIe5kCHiWrklSdgKfS0NFJcjNGcSiflwrnR0srlJdcfYygC1TTnIL+w2woT6acxkFGPISDFfSMtxrWHwrIr4Itcy1DjX2ZMthRijnImQorJRC95U5BAIgDjDqbAu9+VXqQycHnc=,iv:LCcX6Sy9vmDHrfUqKCqxINOQvxDqcEsUwShdwwkqGtM=,tag:8v11vtSfIe4t99ELJm+Rkw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
