--- a/ansible/inventory/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:6jslTHtj,iv:ISa/k1gUTQzQ68caJBPJtgQkopT5L4sGhUXicfGTHd4=,tag:nA5RUeVo0zUL/qCfYj2D8w==,type:str]
-ansible_user: ENC[AES256_GCM,data:z8lcO6Eb,iv:AqhJZ1EkPBEF36ZfQKoe0qjwh5FHSQsjOvGOM73pHzs=,tag:aY5aelXriO4ua7Nf02V2ag==,type:str]
+kind: ENC[AES256_GCM,data:wZtuKEMW,iv:iFE0PG3BHh5dFO+/vKeLYMhYt2QQhZ7zAL2B8BFB7Kg=,tag:XjkSZn3semEhK0Y2mKrjug==,type:str]
+ansible_user: ENC[AES256_GCM,data:SlFLihBQ,iv:el3/bWXaga9SPYrf5juNBHLuvIYXZ2NmLeEkr6XYmTQ=,tag:9L84mTYp5o3ZyALPjltYQg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBRHBSRUJFaUxTbnR4a0li
-            bkQycklDazJkS2VEbXF2TEx5WkhGemNLTENjCnZjSTN1OTBJWjdreVk3WUlicVVs
-            Yk5aLzBEYjk2c0g0SUhhc3hBYjN1aDQKLS0tIFpTcjJNbzR2cG5jZWY5ekNsZmZQ
-            YXZqcmwrSkpJZzZ2RGV0cm95cEU1TGsKvw4xpReYzNzRlJZ2OT7Vfln1uI1Dbt9h
-            Rf+ib8XgOrynyhfw7XtGoRoe/xmX3yD5HjXawJA55fwYsH5Q1dES4g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlclZZNjVGdVNzVEswM0ta
+            bmhVbEQ0ZUZ4MVFLSnh3T3Awc2FwU0h4NlJzCkw3TWlnQlhPcnQvTHNpOHNCMDlu
+            bDJqcnluaXE2TncxWjlZTGlKdTVDRmsKLS0tIHE5QmcxRWtsYTRUM3F1QlhkdGtX
+            L0lGTW9VN3grdkNYRTlQQ0tKOCsxZWsKiBrSg61YtGMN/scCLeoBUmFvaw5NpVsw
+            2wueWEyqGVDeyIzUJwWgQHiCeWU5ogZ3BOIvykVjJphGR7tBd1FlcQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T19:30:11Z"
-    mac: ENC[AES256_GCM,data:6/NVq4cnasyV/MkkmEydSJvTsD3jPY4+0PmiQdXuYecJfbKVs3ELrDI20n2aGlyszxCyQqBN3ktwY19WqK1DJUnfbFQNNRUh2ijIihvuMD+ucayYn53IQeS6yrkqbtu+7vxuHYbaN2jUOuDDTkd+0hrJOYzEm245WtR7XY6pMVM=,iv:NwdcXAA/lBZkfcjLb2BhKceWmipztp9K/F0/lwdCMg8=,tag:L9HLgFAOSnUQ2tb2GxUQBw==,type:str]
+    lastmodified: "2022-12-25T22:25:14Z"
+    mac: ENC[AES256_GCM,data:wSemhy40Lw3VFKBvLMrHUQ1I6nWvx5X9ZeAa7hAFW4flZBHx8IIvhcrMkDlUxu/ftLgwIDpORHsV7mBSZ1c9Hw2GnmnnJ8+R7/A1asCs8Tk9/n3qbhtI0wsSa8L05Uw7CjH+49Bb5ZKkXzFZ19XIddPg36HmRQQ9dxSRecNM+XA=,iv:HV36b/MeXf/kd8s3GnJyx4PywOB9jmrG625bGSKdd2w=,tag:TY9fbj9nHEmLVNvJbOsbug==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
