--- a/ansible/inventory/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:Su06mchM,iv:vkBGhCD5hEiyjLmpGbzImwgtDp8QT6IDUguVFZTXX8c=,tag:w0yfBybojuyeo2QXby0nBg==,type:str]
-ansible_user: ENC[AES256_GCM,data:wOhQZCoP,iv:6iWDKjxc0nM1HV2q/St+m8n0x9Xu68ccWS4PkDSH29Q=,tag:/WwML3/xzU2SAwNEoccOZg==,type:str]
+kind: ENC[AES256_GCM,data:AFy75s6j,iv:OglkClwsUxt205knw4ZDri3NKopCi8972Y0hq2KxgLg=,tag:2YdLax8rO9w6SfqwZOQeQg==,type:str]
+ansible_user: ENC[AES256_GCM,data:6r1Bnkai,iv:FUZHVLjbUB4A91F30qCLb4oiOGN1GHmFzIa5erRnjJc=,tag:9pBPYrS3SF7SDnMJqqWvhg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMYmIzaDFGenNncTFWTktP
-            V2MzWEJuWjhMQlZvOVpCZUJlSndQV093ODFBCjhCNG0wRndzNHZSTGNDMkhidFVv
-            SWNXWDFNZGNjbkd5eHdvbXVHZU8zcjQKLS0tIFQzbExoRjlzV1RVQkZucGd3bEFw
-            N3FzVnpkT0VUYWhab2llcnNzd3NZanMKRNuEP5vsNRZHrQF3l+m1LVXPZVlbGxLK
-            Fo3A/uJRpS+eobXdiPIWylOd+PTF6fHNP2oqxtUw+A5NjryCI32h0g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCSUJlTHJSc0IxTEpGRHk1
+            ZWEveC9NZDZPRHl4QkZleHh2Q0EvTjRDM1dzClJKbE9OTjgvZERrTU1FaHd4WFh5
+            M1BJU1N0WW5NOE1mTlA0T3M1L2EwQncKLS0tIG1NTnFlK211Vzl6M0JSV1VYOThm
+            L1RVbTRHMC9TNU1tUjVWWEYrVENSbEkKHPl+2UtlLhLwMDEAaOXwC45ITL8Mcrn3
+            VcCmCCxvkD3gctO50L/GUGLzzxIqk+HQwHDM7p1n3YsXZy5/JBMQkQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T19:30:11Z"
-    mac: ENC[AES256_GCM,data:2pAmXJmiLKunbvtSMWeoILSzg4tej8fwWkdzm+4TkDWF9e4YnUqxby3t73dbIfu22DfRqC4FLSlO9ev6tBkXyg83ki1/Uk9l6Qx8G9alQVDpqLZnZl6d/vxdnXDH3NF2hY282K/hwEig5jcFwrUn8IO049OeYpsP9jisBTMTwmQ=,iv:AfodAgt2mcxMFY5EonLfYP07PoSN/+fJM3vBZF/4F+8=,tag:WnS0yx6znsW7Xt9gUpamlg==,type:str]
+    lastmodified: "2022-12-25T22:25:14Z"
+    mac: ENC[AES256_GCM,data:OOtPga8qwX/CGpceOu+NUnxSaWkyrcWIunVgnx7SDx970P9Cr+eiju+rSLnVVJwK1td/d0dA57Re4zFGXtT7j9K8z8bvH60bbdLnhu9qkyzWlbYKASmCgYk0Qqh7q/AD1N3lQy+psoCQnu+kXsiBM/CKftYlwf0boB6hPvIViLw=,iv:KZAN2vN557UYkFu8861HbA7Yr2eRZ0lp4DhkaEhfBkg=,tag:3i1sq6sOGecyMpq/Gwm9iw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
