--- a/ansible/inventory/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:QvVXlsJe,iv:66kOrkEp/HVFYcFkKMlEym+6xg6regbczMMogmjF69o=,tag:OOOOg+UaLyjkCwHRzFjnqA==,type:str]
-ansible_user: ENC[AES256_GCM,data:8FoL3n/s,iv:dGeSXhm0XG0ysZg28kpGvt+vHgcob2z/s32RuyjKT/8=,tag:CmNWh3zfLB5vVFenHsWDdA==,type:str]
+kind: ENC[AES256_GCM,data:5szGctZu,iv:vd6oGGvcf29VxhBi0+XMrMBMfwUB5rfBq7dkgh1e59c=,tag:gpqiyG0arPqrxa+N84xNag==,type:str]
+ansible_user: ENC[AES256_GCM,data:1JQ5E3je,iv:CcGlHJyLzWPj5xHuhbiGQIz7VvSBgXlwmjkD6eLXnxA=,tag:p5bJfAx/iLf8BMlM2BqOxA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2SVFFWTNPYVd1OXBhQXU5
-            dHN5NWtFMWQ0WDJha2Z2WVAxWGxkVThmVTNzCisvVDNoTEs3QjBNM0NUc09sdTJa
-            anBCMUljeGNZOGhhbDk3eCsvYVNMS2sKLS0tIHFVT3lPT2MvY3pMREJKRml5OTR6
-            WlhHWDFNdzNFMlR2RjA2NFFwbDdOUGsKVwSrvL/FH6t6MOC7I7jJiGn/ZpVJiaWm
-            yj2fzWHAhFN97dfctTdteVMGddcJivfolUM5SEg0o+vypDAsSfvwTQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzV2I5WGswNWR2UzJJWDht
+            Z1d5VjI0RzlQd21mT1hwWkkzSWxGM0MzZEJRCjJtSFROVTByUjE2TFZTeFFONThM
+            U3NzYVJ0OVZ5WElONC83dTBuWG1INzgKLS0tIC9aVHNjdUdZSloxdTFLakRmOWxk
+            aTFLM3lFN2Jpcis4aWNDb0VWOTVEdkkKtY5tU4epia5u5w5v49zx5uZx7JZKF+ul
+            tKmE3w78sYm5E+aWgmdiW3SQATfLk84bQGB6JvxpI2cRDbqtUqDp3Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T19:30:11Z"
-    mac: ENC[AES256_GCM,data:Q3ECe0/0zUkZ0HwL/mtd13LVD2vxGeAR2jZFib2m/B73c+obU7DYWjcgI34Dl1Gr9am7aGpv7QEU51Hxoyf2pCUCB0vQoOfYUyw5ik/rd+qF1UabP5CAnUPMldA1zufxaIY/f8xY9svc5LaKtTIhP3YzDfPuCej1dsNB9WVebus=,iv:qRwIccWSNr+/zrlP7LoZDdNaKiPH0/Ko6thjXcDE6tI=,tag:9FYKi9tUd2TMuuqqN+qGwg==,type:str]
+    lastmodified: "2022-12-25T22:25:14Z"
+    mac: ENC[AES256_GCM,data:+LP1m3SJZivVRow7JIlmVhbeGNgIoH0c9GyB1ouUhhHiR/cX7JUgmp8e3kNXc6kFgBCt6LR9yphUjDOZ51K4B5U9QPCeik4ryOZ33c+2d1QW8AWfnNTLqbFoP44rdOc3UAjQCjvB+VIeDvW6l0nv2FglX8aiqenuYHhsrxXlQOk=,iv:TDa3J0ognToiy7emrJIqd/5VxOKQdB/W1tY1RgLYwew=,tag:gnJK8YZ97koQrQHBVcXDKA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
