--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:2VLtDdE87SAjv9/VlHiRP+1XOyF3,iv:34Y+gJsrVXWphm6BTlwoknrApWsK4bXFoqXaFn9a0dI=,tag:Hqm0Fc9IzLr3EWMBrHJs7A==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:d/R3m+3g4U79OA3hSttvjtN5ZdF4fo+TF7Gq2a3P9meohqw1XA==,iv:n3/kg7njWKgHF/OALOm1PHryBb851ehGIT4RUBV5QWo=,tag:yLWV7/n41ssCTQkYgTWRHA==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:NvTb8O0iBahKPNQ=,iv:Xk/ifZ4/bayTfCMlMbzW988cw9SAxgLCyx0BduoFLMk=,tag:LreTlKDnUB4OqIqdm19U/g==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:/0bLx7RyaMNIiDvQZLAk/iSFwXTq,iv:VD4G3qgP/vyn0ulBvxgkgWibfcoSKAtSQKEr/M9Ze98=,tag:cpbXDFP7opyFrcCCdZnxYA==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:kvM/vOEHN0hWFs9Q/bKDzfQRBoaQ7FC+fjKUtm2T/L8hBY65Mw==,iv:tc3frWGDeiR5ddQwJr2KtkOYzppkIcMTmSYVjXHEcNY=,tag:CyPRPRZzcTGp9BOT1ff/fg==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:Cld9bIKOo40sb9k=,iv:lqO11PQFYbWnFJheOdZkHpWOo4BUjhcxfW9agi+Aeuc=,tag:cOvdtAhuYWqGwZ0tOgwdew==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvOTF3ZzNTVGRZOTJSdXBD
-            U1gzb2hXUnBRWHBGa2J5NnhCRE5wQ05qaHdBCmVWNTJOS1R4L3BkbUJ1UGY0V3A1
-            aS9nZ1BZYnI3aEQ1WHZjS2dnUUlaaGsKLS0tIFZRRUlWWGtNaGlESU1rODJMRGhQ
-            WG9nVXpNVml3dmFnclE4MGVqeEZDWmsKYcdrsqMmHMu0fQgbvh77AFvsmvDknluj
-            0JfJTRWUPoNXP87Y5cWQMuNqjJz6iJAdHBOmtVkblCKYUAZ9WxP/Uw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNSHN2Y2ZSNmJwWncvRVg1
+            TTNHY3VxNU4rb05IR0U0dVR3K0htd0g5Zld3Cmp5THNkeDY4dmhlRTJ5OFNodDFP
+            RXM0aEJZVkpXTDRLNXZOMGdPMzY5SGcKLS0tIGxkRGhYYzZHVmFwSmwxL084TURW
+            cDVER0VYbmd2cFNENUd3NzBZL3RTVHMKBQVXTR254mP005x3IMUT3CMFkjhOpX9S
+            HZSYYXI89evooxOO8iQ+bJtSmQQKwkiG0DgQJKNacq2iWfHLTp/lhw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T19:30:11Z"
-    mac: ENC[AES256_GCM,data:J6yqBfDYphq9uGphowa8MwN7SNt/ez60vdkYC3S5zoLWvo3AVyWCq5C6y70WjBy0/h5FlSyOziU+NBrdiAamSyVPX+ioTLwwd3/o0H+medllwmfDVFKWNePhEwrOR6Z29n+UtN0HehbhLyl6EABV9wdLeeTLIPdLibERmOiTJTk=,iv:/ryloJpsQWXFl3wqCmw9hsA0iLpjH4/4QO0M7ei3bFg=,tag:9Y+4riKsZNNpU1jSvE89hw==,type:str]
+    lastmodified: "2022-12-25T22:25:14Z"
+    mac: ENC[AES256_GCM,data:IEYJ+I8lbtI8R5lVIQ6dGeDs9yxL3ZHfEdY9rVbSgb7UN6WPTQ4saM0RkPttqDPsL89/GyB9v/nU2M+Cz7FDqsZ5wKA1mmh8+Fw/M9tjsxXQIRv27GyZ3YwPyO8t/ujA/ihQWnE3/twsxcD+XK+kInvYy4Sg9dUlJ3R4lS36MAs=,iv:dOWY0aoYAp0JvjcvqkyyG9P/3DznPQd7WYZzVADkwfk=,tag:jpsxwZzby+wO3QFPL/eaKA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
