--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:KKMEstLDhhlNV9s=,iv:hqI7QyDVvP3AP+8Yup59Ljp8oEZ9nngPOO7yZbuiRWU=,tag:okPTCZM9d/HEL1YvyDzw3Q==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:A4rO4ktzF7oD8mDy+NHlEK1RWWII,iv:7H0z3YHOZw5RuhmUeu4yXPvy2fHUXfffKfuqC5yWvW8=,tag:WRZMglpgrMOBt/r9jVQ0Hg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:RgwErKw162TUVgc=,iv:kf7AzQXtoWnCfXNKAx5xEqfhgGWrZLBCNQSIdZAz5eY=,tag:0SSZ1gJitMTnDuy75KBkWw==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:GL0lD5WU4VdPkuu+rLvlTQj+wa/j,iv:U+AWKSBZwgbJK/gaHAMYZwdQAlNT/5wfmNb9KhHqDDo=,tag:f6tc2KRtlFCOI8qHeB8Rag==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqSm5hRXY2aHI2NnA0Q0pR
-            VUdyVDBld2grck5sSHE0YUxxVDJCQXpGblZ3Cnh0YVdsYlVCZUNmSnVrZjlTanNW
-            S2pLM3E4TnUwUUtqY1krdEZ2S2h6K3cKLS0tIGYwaUZyY05MYUFDUlJBcnp2NHl1
-            azlPK2Y2aE9OdXdpQnd3RFlFNzRpbzQKYGKF6qLt6MF9TWXJtSSikjLIjq0oUQaT
-            7aCiiHebo6/ko4n4Z5V68SBtllmH3/PW5nf9HzxaTaTXDOPs4SpdHw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYZjFYRHRvRnpvK3ErY3J6
+            bmxLWnlEam12d21Nb3JRYzJCeDBZdkpoTkEwCmJnRTkwQ0s5VElGZ0lsZjRUNFNl
+            RGt2d3pvTzdid2tRejBWNHBiWFREdVUKLS0tIEtvMUJjdXQzQTJ5MzhWWnJKL3RV
+            TVJLWUhnc1A4YTBITjRZSU13TlFKbU0Khyzo6QmVk+yte5DGzxql67LQLYRXVeMv
+            U2v724wVRFPDWOaSEjuh+gQpTIrwOZaqrDPAC8SDEosCuetyHR/Ubw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T19:30:11Z"
-    mac: ENC[AES256_GCM,data:JMqjSK/yZuWGCeukXoCHZhy2BqjNRbejEBedWpgWAbVRnXflOGO18OlbPeEWGvXs0WAJjrc7b4d2O5WsjVDC4v4B88l2nDMyorFHLisf1Mda+huIvFTpgUcoSuKhpwkwLL2bLnp4fGGtyt+Id8nSYfhr/9uZtGwbkew42B2z++c=,iv:ocFWGO5hbnmnrh80nGjHwC7K/ewEf448Qwmrmpufj8k=,tag:12qzKmyLwb18B5k0DI0dlg==,type:str]
+    lastmodified: "2022-12-25T22:25:14Z"
+    mac: ENC[AES256_GCM,data:/UeHL+0DbukhB4hTvgxp9BYf7QdoRhRUiD5Mlvx+oFzzVr4cYwgfFRFkLKp7LAyrrFFK0L9qdHDdEuCpjRt7+MdvjdgZmed1SVrDEe/Io+v7z40sEBIyvNgy8PFhSVUgI+hrWUeq5LozP0FGRnIQ+gWf4NbLge89bzAvlNtbKhI=,iv:TOUu5vFBPn4AQGI6A8TqXWYQbS8BfVEZ8Z0qakbbhrg=,tag:1QdyNIHRRGG+J/YZkfCd/w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
