--- a/ansible/inventory/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:Asgr6Xpl,iv:fu+dZD5hFKUVauFAC/7B2D+P+OTnHvnVHcEwvjxm5f0=,tag:fKkMRj7/MXDke1hp3I5vSQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:/6HhjLZF,iv:JVMClHnNPNCuH9GcvtLOjrrjblfjs87KoeP1riAz7jY=,tag:r82E6L4iJ6IM8MMjf/wR1w==,type:str]
+kind: ENC[AES256_GCM,data:C3GYTlue,iv:+jZYVd01+mv1FywQPjVYy4iebmWhyHobWMwkf7yHChI=,tag:eBwbh4QJk3oarUjrKWGKGA==,type:str]
+ansible_user: ENC[AES256_GCM,data:Va8hHcQ4,iv:GEBGi4UASbOD9sdE3LEVXURBE/Q0fcMdSDYVblhasaM=,tag:VxdYH9/4SJ3gTwGkq0xlKQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBOQWRvd3VZem1ZRG4yakhH
-            cGgwOWZwWGhBczhSMTI5VGRDTUo5Y2dHcWprCkNITFZIRTAyZlBpdHc0VUxvUlNT
-            NEpuOElpUWo3MEJOZVZReExMeENkMlkKLS0tIDVta3Zia2dFMlh1MmFNazFEVHN1
-            NDVDbW5LRVZZY05oQWllWnpFdCtKRDgKvYZWNL7p188BBYH8UtpvJhl8JaTqeX/Y
-            oGY7W2okKWGfsD2/R+3PJzPOdXINAfIGmGcNd6IC0kjlW3RsVT5ElQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRTVJmUGRBQ0oyN2dXckV5
+            VTRTNExFZDJ0S0w3bnJqNnhHaG40a0M0d1U0CkcvMFo1RWxFVFMxQ2haa1o0OEZt
+            YVhDZ1phSjYycFZyTjJKYzFxeWtIK3cKLS0tIEpOSmJTVFVWN25HSWY2NjlHVGkx
+            cFo3NVN6S21DazVXZytEeUxxUFNLMGcK6OGGplbmhO+ywpLoRPHA/MoqxJUIvrXy
+            BT7q5PPGBETJKMEN2y8ZtuqmhqaF1OUmGd9rLCO54ECSdXYQDJMwMQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T19:30:11Z"
-    mac: ENC[AES256_GCM,data:lZM2RD0jCMJtxwQrLQ72uDETSg5FqY6ZxFCuGc9GXVHxmMKU4HlEqJmNYS0QftYt/N8EDtF2bddyC03+KRTrt0+V0jgKTho+dbU7HaApNI6pHt5f4KVZaoT4UJ1vt/3jYdBaOjw+8Ylwm33Q+iIziE0DhVj90hFk62IDQ99hEes=,iv:V1EwjsF4/phZiEKrf/bimvj1P+KZCQcwl3wn9cOGRl0=,tag:61sLdT/Ifj0RFMGwNWcNdQ==,type:str]
+    lastmodified: "2022-12-25T22:25:14Z"
+    mac: ENC[AES256_GCM,data:G8ETeOZEs8Ti673dB0tEEPOK7zSrzkmjpaJODr4Tu/Rd3L6bbNTq+WdNe2Iin+7BatxFOh6hYrp4sO20duYL/GLznjdhvbPM2re3b22W/0KQntaGCT5zqYDWCZfL4p1uQXz5xXbM1hHt7aPLlGeep9+xVXmAJtXqR5nRPJ2US4s=,iv:6rzz8NQR7WfCtyRO79YFC2XlQ5TvZPXq/xvNjhWJbL4=,tag:mJvlMVcGZqdnNW97IdtPqw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
