--- a/kubernetes/apps/flux-system/addons/webhooks/github/ingress.yaml
+++ b/kubernetes/apps/flux-system/addons/webhooks/github/ingress.yaml
@@ -5,9 +5,10 @@ metadata:
   name: webhook-receiver
   namespace: flux-system
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-production"
-    external-dns/is-public: "true"
+    cert-manager.io/cluster-issuer: letsencrypt-production
     external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+    external-dns.home.arpa/enabled: "true"
+    hajimari.io/enable: "false"
 spec:
   ingressClassName: nginx
   rules:
