--- a/ansible/inventory/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:wZtuKEMW,iv:iFE0PG3BHh5dFO+/vKeLYMhYt2QQhZ7zAL2B8BFB7Kg=,tag:XjkSZn3semEhK0Y2mKrjug==,type:str]
-ansible_user: ENC[AES256_GCM,data:SlFLihBQ,iv:el3/bWXaga9SPYrf5juNBHLuvIYXZ2NmLeEkr6XYmTQ=,tag:9L84mTYp5o3ZyALPjltYQg==,type:str]
+kind: ENC[AES256_GCM,data:Tq1N/QBV,iv:4UyPku0w1przfEiM7M5JmucFLRvRJuvpLZMNQdc5eQU=,tag:7gxUBhY6RWygboeklJQ9Ww==,type:str]
+ansible_user: ENC[AES256_GCM,data:65cukqZm,iv:7RC9H2u6k9lb3QKCCwVlMjxoGFsNceLHDsLx22k/xYk=,tag:lHOl/YgfzbYHVUE5210HdQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlclZZNjVGdVNzVEswM0ta
-            bmhVbEQ0ZUZ4MVFLSnh3T3Awc2FwU0h4NlJzCkw3TWlnQlhPcnQvTHNpOHNCMDlu
-            bDJqcnluaXE2TncxWjlZTGlKdTVDRmsKLS0tIHE5QmcxRWtsYTRUM3F1QlhkdGtX
-            L0lGTW9VN3grdkNYRTlQQ0tKOCsxZWsKiBrSg61YtGMN/scCLeoBUmFvaw5NpVsw
-            2wueWEyqGVDeyIzUJwWgQHiCeWU5ogZ3BOIvykVjJphGR7tBd1FlcQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1MnVZVE8rc2dQY1JCMWh2
+            TmdKa1NjT2lISERnTUZZM0NJTFpvTU04NEJnCmpwbnBwS0pRS2kvSEdlKzJRSHRx
+            dmo0MThFbEhEZFhHellDeS80N2k0cFkKLS0tIE5uTk9BdjN5NWpRcWc0elFxRUg3
+            TzI1QTJpUFlJWnNOMmVXMUR3SDcrdG8Kt1dqLyBPicLwRNEHFymLKVOznNcjktqg
+            Edr17bPAewxDX/Ltr55QMJOgEyYJcpiJPkrgAlBctE8IP4h8GguVrA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T22:25:14Z"
-    mac: ENC[AES256_GCM,data:wSemhy40Lw3VFKBvLMrHUQ1I6nWvx5X9ZeAa7hAFW4flZBHx8IIvhcrMkDlUxu/ftLgwIDpORHsV7mBSZ1c9Hw2GnmnnJ8+R7/A1asCs8Tk9/n3qbhtI0wsSa8L05Uw7CjH+49Bb5ZKkXzFZ19XIddPg36HmRQQ9dxSRecNM+XA=,iv:HV36b/MeXf/kd8s3GnJyx4PywOB9jmrG625bGSKdd2w=,tag:TY9fbj9nHEmLVNvJbOsbug==,type:str]
+    lastmodified: "2022-12-28T15:47:28Z"
+    mac: ENC[AES256_GCM,data:r3bDTLpSVa5VatUI3gA1GU5EoQVSUfLnQ1PeiLE1mzsrwSWGwZuKpl6yk58VgGroRgiqi071Bzk8d9uywQc1QFJQNT9+ZA689gkZACFIfwhEHi0Y35G6S9xmyWZOxbcy7UnNgvWDuTt0uQUJKJBat+F2Lo/Tc4oqCWaEQBoBStQ=,iv:31dGFvs0DkKui7utFagn07AEk6C9a4KHbTKws8WIYS0=,tag:9Ov+roEwvOCHktQmzCYWHw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
