--- a/ansible/inventory/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:C3GYTlue,iv:+jZYVd01+mv1FywQPjVYy4iebmWhyHobWMwkf7yHChI=,tag:eBwbh4QJk3oarUjrKWGKGA==,type:str]
-ansible_user: ENC[AES256_GCM,data:Va8hHcQ4,iv:GEBGi4UASbOD9sdE3LEVXURBE/Q0fcMdSDYVblhasaM=,tag:VxdYH9/4SJ3gTwGkq0xlKQ==,type:str]
+kind: ENC[AES256_GCM,data:QFk18TAb,iv:X4qjRtcCcYeQ/HpQ1wHpfy/Wx6l4w9O8LPJXFV1ciFg=,tag:qRTkLHknHWZ6OlGK6K8lXg==,type:str]
+ansible_user: ENC[AES256_GCM,data:4nwZ3FoG,iv:mBviC/Nizxurspp2wecN+fDmfPHVXLlEe+/DMIQ3TJM=,tag:a7NdTkDRfNzsVkK8/uJIfw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRTVJmUGRBQ0oyN2dXckV5
-            VTRTNExFZDJ0S0w3bnJqNnhHaG40a0M0d1U0CkcvMFo1RWxFVFMxQ2haa1o0OEZt
-            YVhDZ1phSjYycFZyTjJKYzFxeWtIK3cKLS0tIEpOSmJTVFVWN25HSWY2NjlHVGkx
-            cFo3NVN6S21DazVXZytEeUxxUFNLMGcK6OGGplbmhO+ywpLoRPHA/MoqxJUIvrXy
-            BT7q5PPGBETJKMEN2y8ZtuqmhqaF1OUmGd9rLCO54ECSdXYQDJMwMQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxR2ZqelNva3ZpMGpOTFBp
+            Q1ZLMENhOEMyc1BjVEtpQ1RVeW9obStSTnhFCjFyVHFjclViVHc0YWQrVVFZY3o0
+            UTlTdTFwRFY1SzhOT3hKVGFFdEJVSG8KLS0tIDJXdEFoVU1paWFzcFBaNDU1Zm9q
+            cFltdExNbUR6UDNab1k1NnVDYTJ3S3cK7Fc+6ozmkrfnuxrJN3OCnKYpwmkrz+/G
+            0RSrhj7FjKH4KF1yCMTgfQMwF6DhnlBNl3UmK+grX8RTPYH97CsRrw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T22:25:14Z"
-    mac: ENC[AES256_GCM,data:G8ETeOZEs8Ti673dB0tEEPOK7zSrzkmjpaJODr4Tu/Rd3L6bbNTq+WdNe2Iin+7BatxFOh6hYrp4sO20duYL/GLznjdhvbPM2re3b22W/0KQntaGCT5zqYDWCZfL4p1uQXz5xXbM1hHt7aPLlGeep9+xVXmAJtXqR5nRPJ2US4s=,iv:6rzz8NQR7WfCtyRO79YFC2XlQ5TvZPXq/xvNjhWJbL4=,tag:mJvlMVcGZqdnNW97IdtPqw==,type:str]
+    lastmodified: "2022-12-28T15:47:28Z"
+    mac: ENC[AES256_GCM,data:mShaV0ibr6Hop9E4QeDH3DiEb9Bbc5RQG494F8Buol5WT2xBIPaD2grCDjH4H0hx68m500P04EjDbRKr4kmKQVe9tifUgRHdMEcE6WG1MgDsC0W2RsBkJmuKPitqxdi/qAwbSpxyM12U9d9aOHodlSRN29R8bUsekoiqbLrGapQ=,iv:VNUawnDQNxTBUwLz577ON80ejP0mtoZZHs8MIHBPkXk=,tag:3I36AZEBZxPgIOj2ZHEz7w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
