--- a/ansible/inventory/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:AFy75s6j,iv:OglkClwsUxt205knw4ZDri3NKopCi8972Y0hq2KxgLg=,tag:2YdLax8rO9w6SfqwZOQeQg==,type:str]
-ansible_user: ENC[AES256_GCM,data:6r1Bnkai,iv:FUZHVLjbUB4A91F30qCLb4oiOGN1GHmFzIa5erRnjJc=,tag:9pBPYrS3SF7SDnMJqqWvhg==,type:str]
+kind: ENC[AES256_GCM,data:FaB0OgaG,iv:ipNxGfTP0q/iQSEr/RnRO0PgDXuAOhw/I9ucjK4gchA=,tag:ERYXFugCFiragxsA6LbvBQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:SllinwBv,iv:Y63yHDdKelKwioNNVimrMQsfoqUTwWZcG0lFoy2b2tk=,tag:UmTALlIFsLfaFt2lqi7YDA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBCSUJlTHJSc0IxTEpGRHk1
-            ZWEveC9NZDZPRHl4QkZleHh2Q0EvTjRDM1dzClJKbE9OTjgvZERrTU1FaHd4WFh5
-            M1BJU1N0WW5NOE1mTlA0T3M1L2EwQncKLS0tIG1NTnFlK211Vzl6M0JSV1VYOThm
-            L1RVbTRHMC9TNU1tUjVWWEYrVENSbEkKHPl+2UtlLhLwMDEAaOXwC45ITL8Mcrn3
-            VcCmCCxvkD3gctO50L/GUGLzzxIqk+HQwHDM7p1n3YsXZy5/JBMQkQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBONUt4MUhiYjlBcFZMWXIz
+            aXN1VE1ROXpNbGJVd1NGM1IwMEVCV0ZKVGdBCndkZ1RPTHNNR1pFaW5jU0JjalVj
+            bXJwWVloWUdZTkt1d0gwWjVMSzNXUGsKLS0tIHcrMTJvR2J0TjVBbHJYOEhQTjlo
+            bjFiaHM3Y2RMT1BBUUQxOXhLT29XL1UKZvuIlrecglbARuP90PhN+3OKWaNO++ri
+            JcFkE6dYi/DL/TBk5ClysxVUuTCGRrCoPsZ56iMgb8altBrxc4RbaA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T22:25:14Z"
-    mac: ENC[AES256_GCM,data:OOtPga8qwX/CGpceOu+NUnxSaWkyrcWIunVgnx7SDx970P9Cr+eiju+rSLnVVJwK1td/d0dA57Re4zFGXtT7j9K8z8bvH60bbdLnhu9qkyzWlbYKASmCgYk0Qqh7q/AD1N3lQy+psoCQnu+kXsiBM/CKftYlwf0boB6hPvIViLw=,iv:KZAN2vN557UYkFu8861HbA7Yr2eRZ0lp4DhkaEhfBkg=,tag:3i1sq6sOGecyMpq/Gwm9iw==,type:str]
+    lastmodified: "2022-12-28T15:47:28Z"
+    mac: ENC[AES256_GCM,data:PSgCrDzq4rf7YDu4orpFoVzW03AKciEJRHW/9od6gPCmKpGANHwmZbo+PD+4hkOSvBlK9F/llRHHTyrH8A91CJFvZV2oIyz97dzVoga591V18qW4bUBvbvRNGpKjwC1OcMDJK2UO/Fb4lsrlXlDCKnrEyCeR2qsBiRyc66W7oQ4=,iv:WgQVd5UmPu0XSBHlrWvbqIN9DBIl/PdGH1UsEmIvZKI=,tag:49lV7iSMciUBF0EINvftlg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
