--- a/ansible/inventory/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:5szGctZu,iv:vd6oGGvcf29VxhBi0+XMrMBMfwUB5rfBq7dkgh1e59c=,tag:gpqiyG0arPqrxa+N84xNag==,type:str]
-ansible_user: ENC[AES256_GCM,data:1JQ5E3je,iv:CcGlHJyLzWPj5xHuhbiGQIz7VvSBgXlwmjkD6eLXnxA=,tag:p5bJfAx/iLf8BMlM2BqOxA==,type:str]
+kind: ENC[AES256_GCM,data:fbXL6YZN,iv:GGDqJZ7LABd94hYxDWqHmaaJYH5HFEl8gXXJTEkRVnE=,tag:dk6OlYQRtQRgYJ6piE/IZQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:Rb8/iiyz,iv:fIUuoRE0ft+y9QmDtcCTX+A8pLRraACEGwMn7ZEpZ38=,tag:dzZpdY4tdPu4DAiAtHsc/Q==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzV2I5WGswNWR2UzJJWDht
-            Z1d5VjI0RzlQd21mT1hwWkkzSWxGM0MzZEJRCjJtSFROVTByUjE2TFZTeFFONThM
-            U3NzYVJ0OVZ5WElONC83dTBuWG1INzgKLS0tIC9aVHNjdUdZSloxdTFLakRmOWxk
-            aTFLM3lFN2Jpcis4aWNDb0VWOTVEdkkKtY5tU4epia5u5w5v49zx5uZx7JZKF+ul
-            tKmE3w78sYm5E+aWgmdiW3SQATfLk84bQGB6JvxpI2cRDbqtUqDp3Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzSnJDNGhjR1VnU1NVMU42
+            dDh0Q3BPSWRDdVJpdTNZc3hqVktHR3BQMkVFCnpJMnMyVTc3SXo0VXZGVnJWMUt4
+            bTQ4NEV3MlpMS2RvZHpOWGFTQXRvVHMKLS0tIDFZZENHNUllR2M4aERBcERXa3cv
+            eUdoWnVRY1hMdU9ncFRFc3VSZm1hdW8KomsSoX98CKAbR7ra7iaTxwebaaRMjeOM
+            bHJnOar9F5VfmJJiduI1eB5CjDzAdsviYjvuwdSWtFAc+bFavkaO0Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T22:25:14Z"
-    mac: ENC[AES256_GCM,data:+LP1m3SJZivVRow7JIlmVhbeGNgIoH0c9GyB1ouUhhHiR/cX7JUgmp8e3kNXc6kFgBCt6LR9yphUjDOZ51K4B5U9QPCeik4ryOZ33c+2d1QW8AWfnNTLqbFoP44rdOc3UAjQCjvB+VIeDvW6l0nv2FglX8aiqenuYHhsrxXlQOk=,iv:TDa3J0ognToiy7emrJIqd/5VxOKQdB/W1tY1RgLYwew=,tag:gnJK8YZ97koQrQHBVcXDKA==,type:str]
+    lastmodified: "2022-12-28T15:47:28Z"
+    mac: ENC[AES256_GCM,data:pO3hb9IrbEF04W1NO4PdZJs9xgCwUT8Mg/vhEPjiBqpQQIcPlSMlEU6k9c/OPxJt0CIHzJkCtJJOCrnaAvp/tW/wL/wpK0vlxC3n7djbcN7IfuddVC25gXQR3bYtxnnb0kHs7SmU1vcKJugz7YT5zuZdFKGUDUTTAX17ThfFGhE=,iv:GzLEeYE/i8sBkHakA4+U5Agw/Xnuozz8F5jMpj+M2mo=,tag:FfZ/j/tWtCHrPf2uMbpXOQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
