--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:/0bLx7RyaMNIiDvQZLAk/iSFwXTq,iv:VD4G3qgP/vyn0ulBvxgkgWibfcoSKAtSQKEr/M9Ze98=,tag:cpbXDFP7opyFrcCCdZnxYA==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:kvM/vOEHN0hWFs9Q/bKDzfQRBoaQ7FC+fjKUtm2T/L8hBY65Mw==,iv:tc3frWGDeiR5ddQwJr2KtkOYzppkIcMTmSYVjXHEcNY=,tag:CyPRPRZzcTGp9BOT1ff/fg==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:Cld9bIKOo40sb9k=,iv:lqO11PQFYbWnFJheOdZkHpWOo4BUjhcxfW9agi+Aeuc=,tag:cOvdtAhuYWqGwZ0tOgwdew==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:Fv8gYizzAedADDOPDjhBEuItWCGd,iv:oBkO/wcX4FQw3xfofCPG6h1K6bNzVQI6IloMHu+2iko=,tag:f/OyQc7/o/s8Wndrsl8ipA==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:48YE+O21djwjBGnchUfp3ThPofNLNjMJt3flcHDf7vxlnjsW/Q==,iv:lxc7cQ4F17lH3l6r+ZhxjoBY7bTLI+62XHILSEzTh04=,tag:O0xgfj1DxQzXhZz/cz1ZBg==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:MjRWO0HgOcwXT10=,iv:GzlM9jFBBMn1vuz4pcyQ1VX8feSEMqCcz6nZLg0wb70=,tag:d9KDOu+JFjPkfJ1NUC6wSA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNSHN2Y2ZSNmJwWncvRVg1
-            TTNHY3VxNU4rb05IR0U0dVR3K0htd0g5Zld3Cmp5THNkeDY4dmhlRTJ5OFNodDFP
-            RXM0aEJZVkpXTDRLNXZOMGdPMzY5SGcKLS0tIGxkRGhYYzZHVmFwSmwxL084TURW
-            cDVER0VYbmd2cFNENUd3NzBZL3RTVHMKBQVXTR254mP005x3IMUT3CMFkjhOpX9S
-            HZSYYXI89evooxOO8iQ+bJtSmQQKwkiG0DgQJKNacq2iWfHLTp/lhw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlZHNZTDBPa0s2WTB2UEw1
+            N3pNb2p0NUkxUEI2T0VBd1pqbS9Oc2JyV0VvCnNZVlBZMHd1S2duU2hZcCtseGlr
+            eWxVa1FzRTJKWFo1aHJYYkdQMzhKRVUKLS0tIHVZN05GbDB6VCtFTjAwODVuQmZv
+            bitId3VIOHA0V1ZJOTBzUmgrWmpxakEKutIOBduGTcXHgW+AAoVuDtGluxczTYnP
+            DXLrAMSJTvARMAw7UAcnjSjovCAVHKhB9GK4l/ZOK1QLsvy2pJnYjQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T22:25:14Z"
-    mac: ENC[AES256_GCM,data:IEYJ+I8lbtI8R5lVIQ6dGeDs9yxL3ZHfEdY9rVbSgb7UN6WPTQ4saM0RkPttqDPsL89/GyB9v/nU2M+Cz7FDqsZ5wKA1mmh8+Fw/M9tjsxXQIRv27GyZ3YwPyO8t/ujA/ihQWnE3/twsxcD+XK+kInvYy4Sg9dUlJ3R4lS36MAs=,iv:dOWY0aoYAp0JvjcvqkyyG9P/3DznPQd7WYZzVADkwfk=,tag:jpsxwZzby+wO3QFPL/eaKA==,type:str]
+    lastmodified: "2022-12-28T15:47:28Z"
+    mac: ENC[AES256_GCM,data:rhOHlGVluykmpYqwxxHvu9vRLWkow0GnTsdZ4OWPFruTFO945EzqaDG1AL8syfyTnllhxHwzE4BLHZiu81bNoTPeuPWYjPtWY9QwV1pI4axvMZ7hdhHz07KuKhYGMs1eblqF0BdR0M0C2CVqfb+J1tE/xsVDmJXJ3BX6fcYVgfA=,iv:0yfdtPj/BhGZ3fAiKp0P1RIBu/7RaHtMipv1oqy495Q=,tag:+uG+NjJQ8BgNwJtzQKGbIg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
