--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:RgwErKw162TUVgc=,iv:kf7AzQXtoWnCfXNKAx5xEqfhgGWrZLBCNQSIdZAz5eY=,tag:0SSZ1gJitMTnDuy75KBkWw==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:GL0lD5WU4VdPkuu+rLvlTQj+wa/j,iv:U+AWKSBZwgbJK/gaHAMYZwdQAlNT/5wfmNb9KhHqDDo=,tag:f6tc2KRtlFCOI8qHeB8Rag==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:hI6txe+22DQ1X9I=,iv:TUbUWCUjOKCq7flhm6jDbDeifVHmVU116neDAkeeUG0=,tag:5qWulinSgMgU20mHm04PcA==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:qDRxtpeghnNMJ7IGU7H6pIiziLpD,iv:xoVCOyjZH0otVFh/OFlnW5YGoiLlNXzIgZUn6RMd8ek=,tag:jvsp0ai5NUL/FLkhdjfNvQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYZjFYRHRvRnpvK3ErY3J6
-            bmxLWnlEam12d21Nb3JRYzJCeDBZdkpoTkEwCmJnRTkwQ0s5VElGZ0lsZjRUNFNl
-            RGt2d3pvTzdid2tRejBWNHBiWFREdVUKLS0tIEtvMUJjdXQzQTJ5MzhWWnJKL3RV
-            TVJLWUhnc1A4YTBITjRZSU13TlFKbU0Khyzo6QmVk+yte5DGzxql67LQLYRXVeMv
-            U2v724wVRFPDWOaSEjuh+gQpTIrwOZaqrDPAC8SDEosCuetyHR/Ubw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmSGNGenlHRTd3V3A4ZG00
+            Rm53MnlReTNSSXdYNktWbEtpQUcxcFVvcGxzCjRCaTlGRm9FZ1RPWjhxT284czl0
+            dk5YTkY0ZlFUSjN0RWNKQ3c5aWszdlkKLS0tIDhXbmZoUXMyWmdreEdSV0c0dEdG
+            NFUvKzRKVXl1MmR6WGNCWlNUd1BmcG8KcPY7RiRCE/KNHnPqLO0TGQoNIw2Zo9ID
+            6OrJMRBEngsN3eUIHaOsFL/gopo/trJCTPUy5L0wyN7Jzo6OMHKKWw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-25T22:25:14Z"
-    mac: ENC[AES256_GCM,data:/UeHL+0DbukhB4hTvgxp9BYf7QdoRhRUiD5Mlvx+oFzzVr4cYwgfFRFkLKp7LAyrrFFK0L9qdHDdEuCpjRt7+MdvjdgZmed1SVrDEe/Io+v7z40sEBIyvNgy8PFhSVUgI+hrWUeq5LozP0FGRnIQ+gWf4NbLge89bzAvlNtbKhI=,iv:TOUu5vFBPn4AQGI6A8TqXWYQbS8BfVEZ8Z0qakbbhrg=,tag:1QdyNIHRRGG+J/YZkfCd/w==,type:str]
+    lastmodified: "2022-12-28T15:47:28Z"
+    mac: ENC[AES256_GCM,data:owwPCUqXJk4J5uXwdxJ+7311pSAnBM7ELQEb5c1lYlrAot/i+5bjLw4mtlEa4IUI1rkhH0S46NRy/f5dgBo9jUqAQNbwoy9K73ym3XpeQ3vZrKwnCFhVTluv3BshKv+pU/bHAlNAGvNibHWtq2EOoza9+aAGwLWxfElIHAUbfJs=,iv:QBitSE+pT+2aaRyqD8Bh9XbgYMC1AOIKtUrTtJoPhO4=,tag:h1qyDd3AUaDzS1UfuvfJaQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
