--- a/ansible/inventory/kube/group_vars/kubernetes/os.yml
+++ b/ansible/inventory/kube/group_vars/kubernetes/os.yml
@@ -28,7 +28,9 @@ ubuntu:
     - intel-gpu-tools
     - ipvsadm
     - lm-sensors
+    - mc
     - nano
+    - nfs-common
     - nvme-cli
     - socat
     - python3-kubernetes
