--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:Fv8gYizzAedADDOPDjhBEuItWCGd,iv:oBkO/wcX4FQw3xfofCPG6h1K6bNzVQI6IloMHu+2iko=,tag:f/OyQc7/o/s8Wndrsl8ipA==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:48YE+O21djwjBGnchUfp3ThPofNLNjMJt3flcHDf7vxlnjsW/Q==,iv:lxc7cQ4F17lH3l6r+ZhxjoBY7bTLI+62XHILSEzTh04=,tag:O0xgfj1DxQzXhZz/cz1ZBg==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:MjRWO0HgOcwXT10=,iv:GzlM9jFBBMn1vuz4pcyQ1VX8feSEMqCcz6nZLg0wb70=,tag:d9KDOu+JFjPkfJ1NUC6wSA==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:QekEARyAF+gh6C303m7FvxuJaFMf,iv:S3xuivhGTIhV+mNfll8FHCdh8ynCw851EaXtT+qjS0U=,tag:pyTVSyo69N1JkjubaEx8FA==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:lnllpOa/d8luOKvGaCs/ZopDSzAFK6UDsm7mrh/JdjiX923u7g==,iv:hPXFNJ0FzyQw2ugGlY5PqVCggP8u1SjK0KkyGulcHzE=,tag:bqNgnB/zGZ0pl1HXqH4KhA==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:UetkYS/gTiBR25o=,iv:ccDLV2yZcJXge7J5q43YcOqkBipnti8nkhbWEkAY2tM=,tag:p8ovtTE4Q9RPKUe0Ji1Zfw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlZHNZTDBPa0s2WTB2UEw1
-            N3pNb2p0NUkxUEI2T0VBd1pqbS9Oc2JyV0VvCnNZVlBZMHd1S2duU2hZcCtseGlr
-            eWxVa1FzRTJKWFo1aHJYYkdQMzhKRVUKLS0tIHVZN05GbDB6VCtFTjAwODVuQmZv
-            bitId3VIOHA0V1ZJOTBzUmgrWmpxakEKutIOBduGTcXHgW+AAoVuDtGluxczTYnP
-            DXLrAMSJTvARMAw7UAcnjSjovCAVHKhB9GK4l/ZOK1QLsvy2pJnYjQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvUnJtSzNVcnRhRGFUSGRB
+            UFJiN1l2aGpaai9LbmF6WHNvV05SRXdOakc0CnVCeXRHdGpOSWtDUklJbzU3S3Js
+            cmljUXN5aEl3OTVvWjc3bHEvWXZQVE0KLS0tIGRaQ0dvMG1MUk1KQjQ1ZHVDQmx0
+            Mm1NY0VUSERRSXJVdjJ0bGxPaW55UDgKOpLJSKktlIRk1aVUI71bySKDwRe8DmJ1
+            AP2jnGNeC0UQ+TXaBcsj+T+a8QKphJB/Que+GK9VYUglVtizhHEAsg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-28T15:47:28Z"
-    mac: ENC[AES256_GCM,data:rhOHlGVluykmpYqwxxHvu9vRLWkow0GnTsdZ4OWPFruTFO945EzqaDG1AL8syfyTnllhxHwzE4BLHZiu81bNoTPeuPWYjPtWY9QwV1pI4axvMZ7hdhHz07KuKhYGMs1eblqF0BdR0M0C2CVqfb+J1tE/xsVDmJXJ3BX6fcYVgfA=,iv:0yfdtPj/BhGZ3fAiKp0P1RIBu/7RaHtMipv1oqy495Q=,tag:+uG+NjJQ8BgNwJtzQKGbIg==,type:str]
+    lastmodified: "2022-12-31T14:45:14Z"
+    mac: ENC[AES256_GCM,data:x/Kb+D2sA9M1zE0JHiDzfBTsXOi3AQcbTWg2GxrzTgWBUWdalQxgLF/Gzbfwscp//lXzRp18VBZEhT3BQhzaqhRpZ4vRi9kuzKnxzMcIQgRdHpoZ9VvK/gS18HRPbQc200Xvqw8ZQcY6SBb0waysorPXYZHGkqk0iOLw3NDlZo4=,iv:uQzNNyN8WUe2zBq/WYtT06oLtrf/Ragft4OZgHydskA=,tag:8uLNFXNOF0doQ4ulqi05vg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
