--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:hI6txe+22DQ1X9I=,iv:TUbUWCUjOKCq7flhm6jDbDeifVHmVU116neDAkeeUG0=,tag:5qWulinSgMgU20mHm04PcA==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:qDRxtpeghnNMJ7IGU7H6pIiziLpD,iv:xoVCOyjZH0otVFh/OFlnW5YGoiLlNXzIgZUn6RMd8ek=,tag:jvsp0ai5NUL/FLkhdjfNvQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:bncHvS4q8JKdx9Y=,iv:hHowmkYVZlPnoRnZIsi6DiS6IIAk8ZnvTtxNT8TaZic=,tag:jg7snzcp7Bp8z+Df6OyS8Q==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:1dVvT+GD9wWKjRTMrCkmDgsM2fQT,iv:UQQpqQXC39jsQCbFKmng1EAdZMRuKe8upIlzkP+LwZg=,tag:y/JShwWImbLkD1c8+PxF6w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmSGNGenlHRTd3V3A4ZG00
-            Rm53MnlReTNSSXdYNktWbEtpQUcxcFVvcGxzCjRCaTlGRm9FZ1RPWjhxT284czl0
-            dk5YTkY0ZlFUSjN0RWNKQ3c5aWszdlkKLS0tIDhXbmZoUXMyWmdreEdSV0c0dEdG
-            NFUvKzRKVXl1MmR6WGNCWlNUd1BmcG8KcPY7RiRCE/KNHnPqLO0TGQoNIw2Zo9ID
-            6OrJMRBEngsN3eUIHaOsFL/gopo/trJCTPUy5L0wyN7Jzo6OMHKKWw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4SzdvTnY0cmx6UDhyVS8w
+            TTVPYWh6amd2K2c4K3o3SDFuWVNkNEdQdGxvCmd0RDczSzdab0FvdlcySzFVZVhz
+            NVQ3aWVYR0YvTGlYZmM1elRvRVAxQlEKLS0tIHBGQWp6SENuai9qOGRiNnRGdStF
+            NlJmWC9WT2M2TXE3UEQ2R3h1VHJUN1EKosyquLMaKZLxxn6ZbLMW7ac4/oUjOdVI
+            2Nl3ytGreBaReQJDYshQf8VDCn2rAqwpt3JGyb71QRjNoRF8DG6jhQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-12-28T15:47:28Z"
-    mac: ENC[AES256_GCM,data:owwPCUqXJk4J5uXwdxJ+7311pSAnBM7ELQEb5c1lYlrAot/i+5bjLw4mtlEa4IUI1rkhH0S46NRy/f5dgBo9jUqAQNbwoy9K73ym3XpeQ3vZrKwnCFhVTluv3BshKv+pU/bHAlNAGvNibHWtq2EOoza9+aAGwLWxfElIHAUbfJs=,iv:QBitSE+pT+2aaRyqD8Bh9XbgYMC1AOIKtUrTtJoPhO4=,tag:h1qyDd3AUaDzS1UfuvfJaQ==,type:str]
+    lastmodified: "2022-12-31T14:45:14Z"
+    mac: ENC[AES256_GCM,data:IpOH3Cc09xie/uFgOlRo2KvtumNDNdC0is5fUf+ivdmR5sh2z5JvaQu9leyLun+B9HZeeLrGbAsVI7oIso5kpQROULejkmHXIHM5u7i9ixroC2OIFF7EzIMezvl26A9zQxg5jQ7NN28l9SaYebaRUMB7LQ8uDXc4BL/0nw9jhMw=,iv:Wrx3eYU8wTnjyMbkEl9MLHjhp0GtzkKx9fpSXWjKyAw=,tag:AU+0wbKcuj6ZOPA2Fuzs1w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
