--- a/tmpl/kubernetes/flux/cluster-settings.yaml
+++ b/tmpl/kubernetes/flux/cluster-settings.yaml
@@ -10,5 +10,6 @@ data:
   METALLB_LB_RANGE: "${BOOTSTRAP_METALLB_LB_RANGE}"
   METALLB_K8S_GATEWAY_ADDR: "${BOOTSTRAP_METALLB_K8S_GATEWAY_ADDR}"
   METALLB_INGRESS_ADDR: "${BOOTSTRAP_METALLB_INGRESS_ADDR}"
-  CONFIG_NFS_SERVER_IP_ADDR: "${BOOTSTRAP_NFS_SERVER_IP_ADDR}"
-  CONFIG_NFS_SERVER_PATH: "${BOOTSTRAP_CONFIG_NFS_SERVER_PATH}"
+  TRAEFIK_SERVICE_ADDR: "${BOOTSTRAP_TRAEFIK_INGRESS_ADDR}"
+  NFS_SERVER_ADDR: "${BOOTSTRAP_NFS_SERVER_ADDR}"
+  NFS_SERVER_PATH: "${BOOTSTRAP_NFS_SERVER_PATH}"
